Fix(home): fixed carousel not showing

--- a/front/src/components/Home/homeStyles.scss
+++ b/front/src/components/Home/homeStyles.scss
@@ -214,7 +214,7 @@
   .chapter-carousel__scroller {
     display: grid;
     grid-auto-flow: column;
-    grid-auto-columns: minmax(200px, 260px);
+    grid-auto-columns: minmax(260px, 340px);
     gap: 12px;
     overflow-x: scroll;
     overflow-y: hidden;
